--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,26 +1,33 @@
 .header {
-  background-color: #ffe44d;
-  width: 100%;
-  padding: 16px 10px 16px 10px;
+   background-color: #ffe44d;
+   width: 100%;
+   padding: 16px 10px 16px 10px;
 }
 .header__wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 80px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   gap: 80px;
 }
 
 .header__left {
-  display: flex;
-  align-items: center;
-  gap: 20px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   gap: 20px;
+}
+.header__right {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   gap: 40px;
 }
 
 @media (max-width: 700px) {
-  .header__wrapper {
-    flex-direction: column;
-    align-items: stretch;
-    gap: 20px;
-    padding: 0 10px 0 10px;
-  }
+   .header__wrapper {
+      flex-direction: column;
+      align-items: stretch;
+      gap: 20px;
+      padding: 0 10px 0 10px;
+   }
 }
