--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -3,9 +3,28 @@
    width: 100%;
    padding: 16px 10px 16px 10px;
 }
-.footer__wrapper {
+.footer__container {
+   max-width: 992px;
+   margin: 0px auto;
+   width: 100%;
+}
+.footer__contact {
    display: flex;
-   align-items: center;
+   align-items: flex-start;
    justify-content: space-between;
    gap: 80px;
+}
+.footer__c {
+   font-size: 9px;
+   line-height: 12px;
+   font-weight: 400;
+   color: #1a1a1a;
+}
+/* .contact-hero {
+   display: flex;
+} */
+.contact-hero__icons {
+   display: flex;
+   justify-content: space-between;
+   opacity: 0.4;
 }
