--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,7 +1,6 @@
 .footer {
    background-color: #ffe44d;
    width: 100%;
-   padding: 16px 10px 16px 10px;
 }
 .footer__container {
    max-width: 992px;
@@ -10,7 +9,7 @@
 }
 .footer__contact {
    display: flex;
-   align-items: flex-start;
+   /* align-items: flex-start; */
    justify-content: space-between;
    gap: 80px;
 }
@@ -20,11 +19,33 @@
    font-weight: 400;
    color: #1a1a1a;
 }
-/* .contact-hero {
-   display: flex;
-} */
+.footer__title-text {
+   margin-bottom: 20px;
+}
+.contact-hero {
+   padding: 40px 10px 40px 10px;
+}
 .contact-hero__icons {
    display: flex;
    justify-content: space-between;
    opacity: 0.4;
+}
+.contact-hero__item-one {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+}
+.contact-hero__item-last {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+}
+
+@media (max-width: 700px) {
+   .footer__contact {
+      flex-direction: column;
+      align-items: stretch;
+      gap: 20px;
+      padding: 10px;
+   }
 }
