--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,6 +3,11 @@
    width: 100%;
    padding: 16px 10px 16px 10px;
 }
+.header__item {
+   display: flex;
+   width: 100%;
+   align-items: center;
+}
 .header__wrapper {
    display: flex;
    align-items: center;
@@ -21,6 +26,13 @@
    align-items: center;
    justify-content: space-between;
    gap: 40px;
+   margin: 0px 0px 0px 80px;
+}
+.header__logo {
+   margin: 0px 100px 0px 0px;
+}
+.logo__icons {
+   max-width: 20px;
 }
 
 @media (max-width: 700px) {
