--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
 body {
-   margin: 0;
+   /* margin: 0; */
    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
@@ -14,4 +14,62 @@ body {
    max-width: 992px;
    margin: 0px auto;
    width: 100%;
+}
+/* ОБНУЛЕНИЕ СТИЛЕЙ */
+*,
+*::before,
+*::after {
+   margin: 0;
+   padding: 0;
+   border: 0;
+   box-sizing: border-box;
+}
+
+li {
+   list-style: none;
+}
+
+a,
+a:visited {
+   text-decoration: none;
+   color: black;
+}
+
+a:hover {
+   text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+   font-weight: inherit;
+   font-size: inherit;
+}
+
+img {
+   vertical-align: top;
+}
+
+html,
+body {
+   height: 100%;
+}
+
+html {
+   font-size: 16px;
+   /* по умолчанию */
+}
+
+body {
+   line-height: 1;
+   /* font-family: 'Roboto', sans-serif; */
+}
+
+.wrapper {
+   min-height: 100%;
+   overflow: hidden;
+   background-color: #f5f5f5;
 }
