--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -7,6 +7,7 @@
    display: flex;
    width: 100%;
    align-items: center;
+   justify-content: space-between;
 }
 .header__wrapper {
    display: flex;
