--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -6,9 +6,17 @@
    font-size: 28px;
    line-height: 32px;
    font-weight: 800;
+   padding: 40px 32px 32px 32px;
 }
 .form__input {
    padding: 14px 16px;
    border-radius: 12px;
    border: 1px solid #cfd8dc;
+}
+.form__title {
+   font-weight: 800;
+   font-size: 28px;
+   line-height: 32px;
+   color: #000000;
+   margin-bottom: 24px;
 }
