--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -15,8 +15,8 @@
 }
 .modal_content {
    width: 420px;
-   height: 426px;
-   padding: 16px;
+   /* height: 426px; */
+   /* padding: 16px; */
    background: #ffffff;
    border-radius: 20px;
    box-shadow: 0px 2px 8px rgba(40, 41, 61, 0.08),
