--- a/src/components/Auth/auth.css
+++ b/src/components/Auth/auth.css
@@ -6,7 +6,7 @@
    border: 1px solid #cfd8dc;
    font-size: 16px;
    line-height: 20px;
-   color: #7b8e98;
+   /* color: #7b8e98; */
 }
 .auth__input:hover,
 .auth__input:focus {
@@ -25,4 +25,12 @@
    font-weight: normal;
    text-align: right;
    margin-bottom: 22px;
+}
+.auth__remove-password-left {
+   color: #7b8e98;
+   font-size: 14px;
+   line-height: 20px;
+   font-weight: normal;
+   text-align: left;
+   margin: 24px 0px 24px 0px;
 }
