--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -1,7 +1,7 @@
 .form {
    display: flex;
    flex-direction: column;
-   gap: 0.5rem;
+   gap: 1.5rem;
    max-width: 400px;
    font-size: 28px;
    line-height: 32px;
@@ -18,5 +18,5 @@
    font-size: 28px;
    line-height: 32px;
    color: #000000;
-   margin-bottom: 24px;
+   /* margin-bottom: 24px; */
 }
