--- a/src/components/Product/index.module.css
+++ b/src/components/Product/index.module.css
@@ -5,6 +5,9 @@
    width: 100%;
    margin: 0 auto;
 }
+.header {
+   margin-top: 36px;
+}
 
 .product {
    display: flex;
@@ -20,6 +23,12 @@
    line-height: 32px;
    margin-bottom: 4px;
 }
+.productTitle__reviews {
+   margin: 0px 0px 20px 0px;
+   font-weight: 800;
+   font-size: 28px;
+   line-height: 32px;
+}
 
 .imgWrapper {
    flex: 1;
@@ -30,6 +39,23 @@
 .desc {
    max-width: 400px;
    flex-shrink: 0;
+}
+.back {
+   color: #7b8e98;
+   font-size: 14px;
+   line-height: 20px;
+   cursor: pointer;
+}
+.info {
+   display: flex;
+   align-items: center;
+   gap: 1rem;
+}
+.h1 {
+   font-size: 28px;
+   line-height: 32px;
+   font-weight: 800;
+   margin: 4px 0px 4px 0px;
 }
 
 .oldPrice {
@@ -131,6 +157,7 @@
    line-height: 28px;
    font-weight: 800;
    margin-bottom: 20px;
+   margin-top: 20px;
 }
 
 .subtitle {
@@ -151,6 +178,7 @@
    font-size: 16px;
    line-height: 20px;
    color: #7b8e98;
+   font-weight: normal;
 }
 
 .description {
@@ -185,7 +213,81 @@
    fill: red;
    stroke: red;
 }
+.review__submit {
+   display: flex;
+   flex-direction: column;
+   gap: 1.5rem;
+   max-width: 1000px;
+   font-size: 28px;
+   line-height: 32px;
+   font-weight: 800;
+   padding: 40px 32px 32px 32px;
+}
 
+.reviews {
+   border-top: 1px solid #eceff1;
+   margin-top: 24px;
+}
+.reviews__info {
+   display: flex;
+   align-items: center;
+   gap: 1rem;
+}
+.reviews__author {
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
+   font-weight: 800;
+   font-size: 20px;
+   line-height: 24px;
+   color: #1a1a1a;
+   padding: 16px 0px 0px 0px;
+}
+.reviews__text {
+   padding: 16px 0px 16px 0px;
+   color: #1a1a1a;
+   font-size: 14px;
+   line-height: 20px;
+   display: flex;
+   justify-content: space-between;
+   padding-right: 2rem;
+}
+
+.reviews__date {
+   color: #7b8e98;
+   font-size: 14px;
+   line-height: 20px;
+   font-weight: normal;
+}
+.reviews__btn {
+   margin: 20px 0px 20px 0px;
+}
+.reviews__avatar {
+   width: 50px;
+   height: 50px;
+   border-radius: 50%;
+}
+.textarea {
+   border: 1px solid #7b8e98;
+   border-radius: 20px;
+   padding: 16px 14px;
+   font-size: 14px;
+   width: 100%;
+   resize: none;
+}
+.button__sendReview {
+   max-width: 200px;
+}
+.basketIcon {
+   cursor: pointer;
+}
+.button__allReviews {
+   width: 100%;
+   margin: 24px 0px 40px 0px;
+   font-size: 16px;
+   font-weight: 700;
+   line-height: 20px;
+}
 @media (max-width: 1000px) {
    .product {
       gap: 20px;
