--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,15 @@
 .search {
    font-weight: bold;
 }
+.content {
+   display: flex;
+   flex: 1 0 auto;
+   flex-direction: column;
+}
+.not-auth {
+   display: flex;
+   flex: 1 0 auto;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+}
