--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -2,7 +2,7 @@
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
-   max-width: 400px;
+   width: 100%;
    font-size: 28px;
    line-height: 32px;
    font-weight: 800;
