--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,6 +2,7 @@
    background-color: #ffe44d;
    width: 100%;
    padding: 16px 10px 16px 10px;
+   flex: 0 0 auto;
 }
 .header__item {
    display: flex;
@@ -34,6 +35,12 @@
 }
 .logo__icons {
    max-width: 20px;
+}
+.header__userinfo {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: end;
 }
 
 @media (max-width: 700px) {
