--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,8 @@ body {
    overflow: hidden;
    background-color: #f5f5f5;
 }
+#root {
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+}
