--- a/src/pages/Main/main.css
+++ b/src/pages/Main/main.css
@@ -1,7 +1,9 @@
 .main-page {
-   background-color: #ffe44d;
+   /* background-color: #ffe44d; */
    width: 100%;
    height: 450px;
+   /* display: flex;
+   flex: 1 0 auto; */
 }
 .main-page__item {
    max-width: 415px;
@@ -24,4 +26,5 @@
    padding: 16px 28px 16px 28px;
    margin: 40px 0px 0px 0px;
    cursor: pointer;
+   background-color: #ffe44d;
 }
