--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -2,7 +2,7 @@
    position: relative;
    display: flex;
    flex-direction: column;
-   align-items: flex-start;
+   /* align-items: flex-start; */
    padding: 10px;
    border-radius: 10px;
    justify-content: space-between;
@@ -10,13 +10,11 @@
 }
 
 .card:hover {
-   box-shadow: 0 2px 4px rgba(40, 41, 61, 0.04),
-      0 8px 16px rgba(96, 97, 112, 0.16);
+   box-shadow: 0 2px 4px rgba(40, 41, 61, 0.04), 0 8px 16px rgba(96, 97, 112, 0.16);
 }
 
 .card:focus-within {
-   box-shadow: 0 0 1px rgba(40, 41, 61, 0.16),
-      0 0.5px 2px rgba(96, 97, 112, 0.24);
+   box-shadow: 0 0 1px rgba(40, 41, 61, 0.16), 0 0.5px 2px rgba(96, 97, 112, 0.24);
 }
 
 .card__description {
@@ -161,4 +159,10 @@
 } */
 .card__liked > svg {
    fill: red;
+}
+
+.card__buttons {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
