--- a/src/pages/Catalog/index.css
+++ b/src/pages/Catalog/index.css
@@ -1,7 +1,6 @@
 .sort-cards {
    background: #ffffff;
-   box-shadow: 0px 2px 4px rgba(40, 41, 61, 0.04),
-      0px 8px 16px rgba(96, 97, 112, 0.16);
+   box-shadow: 0px 2px 4px rgba(40, 41, 61, 0.04), 0px 8px 16px rgba(96, 97, 112, 0.16);
    border-radius: 12px;
    margin-bottom: 40px;
    margin-top: 20px;
@@ -19,4 +18,11 @@
 
 .sort-item:hover {
    color: #1a1a1a;
+}
+
+.catalog-page {
+   margin-top: 20px;
+}
+.catalog-page__p {
+   font-size: 28px;
 }
