добавляет изменения стиля проекта

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,5 +1,5 @@
 .header {
-   background-color: #ffe44d;
+   background-color: #dad5d1;
    width: 100%;
    padding: 16px 10px 16px 10px;
    flex: 0 0 auto;
