--- a/src/components/BaseButton/baseButton.module.css
+++ b/src/components/BaseButton/baseButton.module.css
@@ -4,17 +4,17 @@
    align-items: center;
    padding: 14px 16px;
    max-width: 356px;
-   font-weight: 700;
+   font-weight: 500;
    font-size: 16px;
    line-height: 20px;
    color: #1a1a1a;
    cursor: pointer;
-   font-family: Nunito;
-   border-radius: 55px;
+   font-family: Montserrat;
+   /* border-radius: 55px; */
    background-color: #fff;
    border: 1px solid #cfd8dc;
 }
 .yellow {
    border: none;
-   background-color: #ffe44d;
+   background-color: #99c27c;
 }
