--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -4,7 +4,7 @@
    flex-direction: column;
    /* align-items: flex-start; */
    padding: 10px;
-   border-radius: 10px;
+   /* border-radius: 10px; */
    justify-content: space-between;
    margin: 0px 0px 60px 0px;
 }
@@ -45,7 +45,7 @@
 .card__price {
    font-size: 20px;
    line-height: 24px;
-   font-weight: 800;
+   font-weight: 700;
    display: block;
    margin-bottom: 6px;
 }
@@ -120,22 +120,20 @@
 .btn {
    padding: 10px 18px;
    font-size: 16px;
-   font-weight: 700;
+   font-weight: 400;
    line-height: 20px;
-   border-radius: 55px;
+   /* border-radius: 55px; */
    text-decoration: none;
    display: inline-block;
    transition: background-color 0.3s;
-   font-family: 'Nunito';
 }
 
 .btn_type_primary {
-   background-color: #ffe44d;
-   color: black;
+   background-color: #99c27c;
 }
 .btn_type_primary:hover {
-   background-color: #ffaa0d;
-   color: #f44336;
+   background-color: #6f8f57;
+   /* color: white; */
 }
 
 .tag {
