--- a/src/components/Header/Search/search.css
+++ b/src/components/Header/Search/search.css
@@ -7,19 +7,19 @@
 
 .search__input {
    width: 100%;
-   border-radius: 24px;
+   /* border-radius: 24px; */
    border: 1px solid transparent;
    outline: none;
-   padding: 13px 60px 13px 20px;
+   padding: 16px 20px 16px 20px;
    color: #000;
    font-size: 16px;
    line-height: 20px;
-   caret-color: #feba0c;
+   /* caret-color: #feba0c; */
    /* max-width: 468px; */
 }
 .search__input:focus {
    background: #ffffff;
-   border: 1px solid #fed700;
+   /* border: 1px solid #fed700; */
 }
 
 .search__input::placeholder {
