--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -18,9 +18,8 @@
    /* height: 426px; */
    /* padding: 16px; */
    background: #ffffff;
-   border-radius: 20px;
-   box-shadow: 0px 2px 8px rgba(40, 41, 61, 0.08),
-      0px 20px 32px rgba(96, 97, 112, 0.24);
+   /* border-radius: 20px; */
+   box-shadow: 0px 2px 8px rgba(40, 41, 61, 0.08), 0px 20px 32px rgba(96, 97, 112, 0.24);
 }
 
 .modal.active {
