--- a/src/components/SortedGoods/sorted.css
+++ b/src/components/SortedGoods/sorted.css
@@ -1,7 +1,7 @@
 .sort-cards {
    background: #ffffff;
    box-shadow: 0px 2px 4px rgba(40, 41, 61, 0.04), 0px 8px 16px rgba(96, 97, 112, 0.16);
-   border-radius: 12px;
+   /* border-radius: 12px; */
    margin-bottom: 40px;
    margin-top: 20px;
    padding: 12px 16px;
