--- a/src/components/Basket/cart.css
+++ b/src/components/Basket/cart.css
@@ -17,4 +17,11 @@
 }
 .basket__clear {
    cursor: pointer;
+   /* border: 1px solid #7b8e98; */
+   color: #7b8e98;
+   padding: 8px;
+}
+.basket__clear:hover {
+   color: black;
+   transition: 0.3s;
 }
