--- a/src/components/Basket/BacketCardlist/index.css
+++ b/src/components/Basket/BacketCardlist/index.css
@@ -2,6 +2,7 @@
    display: flex;
    flex-direction: column;
    gap: 20px;
+   margin: 20px 0px 0px 0px;
 }
 .favorites__h1-right {
    text-align: right;
