--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -7,10 +7,12 @@
    /* border-radius: 10px; */
    justify-content: space-between;
    margin: 0px 0px 60px 0px;
+   transition: all 0.3s ease-in-out 0s;
 }
 
 .card:hover {
    box-shadow: 0 2px 4px rgba(40, 41, 61, 0.04), 0 8px 16px rgba(96, 97, 112, 0.16);
+   transform: scale(1.04);
 }
 
 .card:focus-within {
@@ -140,7 +142,8 @@
    /* color: white; */
 }
 .btn_type_primary-active {
-   background-color: #dad5d1;
+   background-color: #6f8f57;
+   color: white;
 }
 
 .tag {
