--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -7,6 +7,7 @@
    line-height: 32px;
    font-weight: 800;
    padding: 32px 32px 32px 32px;
+   align-items: center;
 }
 .form__input {
    padding: 14px 16px;
