--- a/src/components/Header/Search/search.css
+++ b/src/components/Header/Search/search.css
@@ -10,7 +10,7 @@
    /* border-radius: 24px; */
    border: 1px solid transparent;
    outline: none;
-   padding: 16px 20px 16px 20px;
+   padding: 16px 20px 16px 32px;
    color: #000;
    font-size: 16px;
    line-height: 20px;
@@ -47,6 +47,30 @@
 }
 .search__btn:hover svg {
    fill: #feba0c;
+}
+.search__close {
+   width: 18px;
+   height: 18px;
+   opacity: 0.5;
+   position: absolute;
+   top: 18px;
+   right: 15px;
+   cursor: pointer;
+}
+.search__close:hover {
+   opacity: 0.8;
+}
+.search__main {
+   position: relative;
+}
+.search__search {
+   width: 18px;
+   height: 18px;
+   opacity: 0.5;
+   position: absolute;
+   top: 18px;
+   left: 10px;
+   cursor: pointer;
 }
 
 @media (max-width: 350px) {
