--- a/src/components/Pagination/pagination.css
+++ b/src/components/Pagination/pagination.css
@@ -30,15 +30,16 @@
    padding: 8px;
    /* border-radius: 5px; */
 }
-.page-link:hover {
+/* .page-link:hover {
    background-color: #dad5d1;
    border-color: #dad5d1;
-   /* transform: scale(1.3); */
-   /* opacity: 0.5; */
-}
-/* .page-item__active {
-   background-color: red;
+   transform: scale(1.3);
+   opacity: 0.5;
+} */
+.page-item__active {
+   background-color: #dad5d1;
+   border-color: #dad5d1;
 }
 .page-item__active-none {
-   background-color: blue;
-} */
+   background-color: transparent;
+}
